--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .table_tag {
+  margin-top: 100px;
   border: 3px solid #000;
   border-collapse: collapse;
 }
@@ -23,10 +24,12 @@
 }
 
 .main_content .title a {
+  padding-left: 150px;
   text-decoration: none;
   color: white;
   margin-bottom: 25px;
-  font-family: 'Graphik LCG', sans-serif;
+  font-family: 'GraphikLCG', sans-serif;
+  font-weight: medium;
 }
 
 .main_content .container {
@@ -41,7 +44,7 @@
   color: white;
   background-color: #2f1ce4;
   border: 3px solid #2f1ce4;
-  font-family: 'Graphik LCG', sans-serif;
+  font-family: 'GraphikLCG', sans-serif;
 }
 
 .main_content .sub_title2 a{
@@ -50,7 +53,7 @@
   padding: 20px;
   color: white;
   border: 3px solid white;
-  font-family: 'Graphik LCG', sans-serif;
+  font-family: 'GraphikLCG', sans-serif;
 }
 
 .course_info .container {
@@ -61,7 +64,7 @@
 }
 
 .course_info .back_up {
-  width: 1350px;
+  width: 1170px;
   margin: 0 auto;
 }
 
@@ -79,7 +82,45 @@
 .course_info .container .title {
   padding-left: 100px;
   margin-top: 100px;
-  font-family: 'GarlicLCG', sans-serif;
+  font-family: 'GraphikLCG', sans-serif;
   font-size: 48px;
   color: #222020;
+}
+
+.course_info h2 {
+  padding-left: 180px;
+  font: 38px;
+  color: #2f1ce4;
+  margin-top: 100px;
+  margin-bottom: 30px;
+  font-family: 'GraphikLCG', sans-serif;
+
+}
+
+.course_info .container ol, ul {
+  padding-left: 180px;
+  font-size: 18px;
+  font-family: 'GraphikLCG', sans-serif;
+}
+
+.course_info .container a {
+  text-decoration: none;
+}
+
+.course_info p {
+  padding-left: 180px;
+  margin-top: 20px;
+  font-family: 'GraphikLCG', sans-serif;
+
+}
+
+.course_info figure {
+  padding-left: 200px;
+  display: inline-block;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.course_info figcaption {
+  text-align: center;
 }
